k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: validate-frontend
  namespace: validate-frontend-stage
spec:
  tls:
    - secretName: stage-api-validate-myapp-com-tls
      hosts:
        - stage-api.validate.myapp.com
  rules:
    - host: stage-api.validate.myapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: validate-frontend
                port:
                  number: 80
